clusters/hetzner-dr/apps/metabase-stats/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: metabase-stats-external
  namespace: metabase-stats
  labels:
    kubernetes.io/service-name: metabase-stats
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 3000
endpoints:
  - addresses:
      - "10.77.0.2"
    conditions:
      ready: true
