clusters/hetzner-dr/apps/metabase-stats/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase-stats
  namespace: metabase-stats
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
